change algorithm type from backtracking to greedy

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "license": "ISC",
   "author": "Soroush Habibi",
   "type": "module",
-  "main": "./build/main.js",
+  "main": "./build/index.js",
   "scripts": {
-    "start": "node ./build/main.js"
+    "start": "node ./build/index.js"
   },
   "dependencies": {
     "@types/node": "^24.2.0",
