--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
     "start": "node ./build/index.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "@types/node": "^24.2.0",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "prisma": "^6.16.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3"
