--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 backend/.env
 backend/node_modules
 backend/build
+backend/prisma
 frontend/dist
 frontend/node_modules
 frontend/dist
+frontend/.env
