--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^24.2.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "joi": "^18.0.1",
     "prisma": "^6.16.2"
   },
   "devDependencies": {
