--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
-    "vue": "^3.5.21"
+    "material-design-icons-iconfont": "^6.7.0",
+    "vue": "^3.5.21",
+    "vuetify": "^3.10.2"
   },
   "devDependencies": {
     "@types/node": "^24.5.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "sass": "^1.93.1",
+    "sass-loader": "^16.0.5",
     "vite": "^7.1.5"
   }
 }
