--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "@types/node": "^24.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "joi": "^18.0.1",
     "prisma": "^6.16.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3"
   }
 }
