--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "joi": "^18.0.1",
-    "prisma": "^6.16.2"
+    "prisma": "^6.16.2",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
